@@ -33,6 +33,7 @@ import (
 
 func init() {
 	monitors.RegisterActive("http", create)
+	monitors.RegisterActive("synthetics/http", create)
 }
 
 var debugf = logp.MakeDebug("http")
