@@ -36,6 +36,7 @@ var debugf = logp.MakeDebug("icmp")
 
 func init() {
 	monitors.RegisterActive("icmp", create)
+	monitors.RegisterActive("synthetics/icmp", create)
 }
 
 func create(
