@@ -1,0 +1,31 @@
+inputs:
+- type: synthetics/http
+  id: unique-http-id
+  name: my-http
+  schedule: '*/5 * * * * * *'
+  host: "http://localhost:80/service/status"
+  timeout: 16s
+  wait: 1s
+- type: synthetics/tcp
+  id: unique-tcp-id
+  name: my-tcp
+  schedule: '*/5 * * * * * *'
+  host: "localhost:777"
+  timeout: 16s
+  wait: 1s
+- type: synthetics/icmp
+  id: unique-icmp-id
+  name: my-icmp
+  schedule: '@every 5s'
+  host: "localhost"
+  ipv4: true
+  ipv6: true
+  mode: any
+  timeout: 16s
+  wait: 1s
+outputs:
+  default:
+    type: elasticsearch
+    hosts: [127.0.0.1:9200, 127.0.0.1:9300]
+    username: elastic
+    password: changeme
