@@ -1,27 +1,0 @@
-name: Heartbeat
-cmd: heartbeat
-rules:
-- filter_values_with_regexp:
-    key: type
-    re: ^monitor/.+
-    selector: streams
-- map:
-    path: streams
-    rules:
-    - translate_with_regexp:
-        path: type
-        re: ^monitor/(?P<type>.+)
-        with: $type
-- copy:
-    from: streams
-    to: heartbeat
-- rename:
-    from: heartbeat.streams
-    to: monitors
-- filter:
-    selectors:
-    - heartbeat
-    - output
-    - keystore
-when: HasItems(%{[heartbeat.monitors]}) && HasNamespace('output', 'elasticsearch',
-  'redis', 'kafka', 'logstash')
